# CMake-Catch2-cpp-project-template

./: CMakeLists.txt  README.md
.cache/clangd/index/: library.cpp.3D1CF39F44C3CD11.idx  library.hpp.594E306D38DB4325.idx  main.cpp.26EC72B44E4C8EB1.idx  test_sum.cpp.2D9FB1A07359792B.idx
src/: CMakeLists.txt  example.cpp  main.cpp
test/: CMakeLists.txt  test_sum.cpp
